# OiRunner

./: .gitignore  LICENSE  Makefile  README.md  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  release.yml
OiRunner/: BetterRunner.py  Exceptions.py  OiRunner.py  run.py  submit.py  util.py
OiRunner/tools/: log.py
Tools/: log.py
docs/: automation.md  judge.md  remotejudge.md
tests/: test_basic.py  test_func.py  test_project.py  test_submit.py  test_tools.py  util.py
tests/data/: a.in  check.cpp  check.out  fail.cpp
tests/data/check_data/: 2.ans  large.ans  large.in
tests/data/test_freopen/: test_freopen.cpp.bak
tests/data/test_setting/.OiRunner/: settings.json
